app/assets/stylesheets/pages/_piece.css.scss
//
// 1. LAYOUT
// ---------------------------------------------------

.is-article {

  @include media-upto($bp-s) {
    .piece-header { padding-top: 1.1em; }
  }

  @include media-upto($bp-l) {
    .piece-header-text {
      @include spacing(margin-bottom, 2);
    }
    .piece-header-illustration img {
      max-height: 65vh;
    }
  }

  @include media-from($bp-l) {
    .piece-header { @include row; }

    .piece-header-illustration {
      @include span-columns(6);
      @include clearfix;
      + * { overflow: hidden; }

      figure {
        @include clearfix;
        float: right;
        max-width: 27em;
      }
    }

    .piece-header-text {
      @include centered;
      max-width: flex-grid(6);
      @include padding-v(16%);
    }
  }

}

.piece-header .piece-unit-metadata {
  margin-top: 1.5em;
}

.piece-header-text {
  @include media-upto($bp-l) {
    text-align: center;
    > * { @include centered; }
  }
  .is-lesson & {
    @include spacing(margin-top margin-bottom, 2.5);
    @extend .l-col-reading;
    text-align: center;
    > * { @include centered; }
  }
}

.piece-body {
  @include spacing(margin-bottom, 2);
  .footnotes { @include spacing(margin-top, 1.5); }
}

.piece-author {
  @include spacing(margin-top margin-bottom, 2.5);
}

.piece-author-portrait {
  float: right;
  margin-left: 1em;
  margin-bottom: 1em;
  width: 6em;
  @include media-from($bp-m) {
    width: 8em;
    float: left;
    margin-left: 0;
    margin-right: 1.5em;
    + * { overflow: hidden; }
  }
}

.piece-illustrator {
  @include rem(font-size, 15px);
  color: $c-text-faint-more;
}

.piece-post > * > * {
  @include spacing(padding-top padding-bottom, 1.5);
}

@include media-upto($bp-m) {
  .piece-post-issue   { @include span-columns(6); }
  .piece-post-topics  { @include span-columns(6); @include omega(); }
  .piece-post-piece   { clear: left; }
}
@include media-from($bp-m) {
  .piece-post-issue   { @include span-columns(3); }
  .piece-post-topics  { @include span-columns(3); }
  .piece-post-piece   { @include span-columns(6); }
}








//
// 2. STYLING
// ---------------------------------------------------

.piece {
  @include type-enhancements;
}

.piece-header-author {
  font-size: 1.1em;
  color: $c-text-faint-less;
  text-transform: uppercase;
  letter-spacing: .1em;
  word-spacing: .15em;
  margin-bottom: 1em;
  @include media-from($bp-l) { margin-bottom: 1.5em; }
  color: $c-text-gray;
}

.piece-header-title {
  @extend .h-jumbo;
}

.piece-header-synopsis {
  font-family: $type-serif;
  font-weight: weight(medium);
  color: $c-text-summary;
  font-size: em(24, $rem-value);
  max-width: 28em;
  line-height: 1.25;
  margin-top: .4em;
}

.piece-body {

  $type-size: 23px;
  @include rem(font-size, $type-size);
  font-family: $type-serif;
  color: $c-text-body;

  strong  { font-weight: weight(semibold); }
  em, q   { font-style: italic; }

  $line-height: 1.5;
  $line-height-em: $line-height * 1em;

  line-height: $line-height;
  @include media-upto($bp-m) { line-height: 1.4; }

  hr {
    display: block;
    border: 0;
    text-align: center;
    padding: 0;
    margin: 2em 0;
    &:before {
      font-family: $type-serif;
      content: "\2042";
      @include color-by-issue(color);
    }
  }

  > p + p {
    text-indent: 1em;
    @include media-from($bp-l)  { text-indent: $line-height-em; }
  }

  ul, ol {
    padding: 1em;
    padding-right: 0;
    @include media-from($bp-l) { padding: $line-height-em; padding-right: 0; }
  }

  > h2 {
    font-size: 1.1em;
    font-family: $type-sans;
    font-weight: weight(bold);
    line-height: 1.2;
    margin-top: 2em;
    margin-bottom: .25em;
  }

  dl {
    @include margin-v(1em);
    dt      { font-weight: weight(semibold); }
    dd + *  { margin-top: 1em; }
  }

  pre, blockquote {
    border-left: solid 1px transparent;
    @include color-by-issue(border-color);
  }

  pre {
    $fz: .7;
    font-size: $fz * 1em;
    font-family: "Monaco", sans-serif;
    color: $c-text-gray;
    word-wrap: break-word;

    @include margin-v(1em / $fz);
    padding-left: (1em / $fz);
    @include media-from($bp-l) { @include padding-h($line-height-em / $fz); }
  }

  blockquote {
    color: $c-text-caption;

    @include margin-v(1em);
    padding-left: 1em;
    @include media-from($bp-l) { @include padding-h($line-height-em); }

    p + p { margin-top: 1em; }
  }

  ol { list-style-type: decimal; }
  ul { list-style-type: square; }
  li > p:first-child { margin-top: 0; }

  sup {
    text-indent: 0;
    display: inline-block;
    margin-left: .15em;
  }

  .footnote {
    font-family: $type-sans;
    font-weight: weight(medium);
    vertical-align: text-top;
    font-size: 0.6em;
    letter-spacing: 1px;

    &:target {
      outline: none;
    }
  }

  .footnotes {
    font-family: $type-sans;
    font-weight: weight(regular);
    color: $c-text-faint;

    ol {
      @include rem(font-size, 15px);
      line-height: 1.25;
      @include padding-v(0);
      li + li { margin-top: .35em; }
    }

    :target {
      font-weight: weight(medium);
      color: $c-text-body;
    }

    hr { display: none; }

    a {
      &[href^="http"] { border-bottom: solid 1px; }
      @include link-hover-black { color: inherit; }
    }
  }

  .footnote-popover {
    .reversefootnote { display: none !important; }
    font-family: $type-sans;
    color: $c-text-gray;
    text-indent: 0;
    padding: .65em .75em;
    line-height: 1.35;
    text-align: left;
    @include rem(font-size, .9*$rem-base);
  }

  .footnote-popover a[href^="http"],
  .footnotes a[href^="http"] {
    @extend .external;
  }
}

